# hackyeah_2024

./: README.md
speech_grade/: .env.example  .gitignore  README.md  pyproject.toml
speech_grade/src/speech_grade/: __init__.py  app.py  audio_analisis.py  convert_video_to_audio.py  transcription.py  video_analisis.py
speech_grade/src/speech_grade/pipeline/: graph.py  types.py  utils.py
speech_grade/src/speech_grade/pipeline/prompts/: classify_images.py  classify_sentiment.py  convert_transcript_to_text.py  detect_audio_problems.py  extract_keywords.py  extract_target_group.py  generate_questions.py  generate_suggestions.py  ner.py  translate_to_english.py
speech_grade/src/speech_grade/pipeline/tools/: clarity_score.py  extract_images.py  format_transcription.py  speech_speed.py  volume_analisis.py
speech_grade_frontend/frontend/: package-lock.json  package.json  tailwind.config.js
speech_grade_frontend/frontend/src/: App.js  AppContext.js  CurrentVideoContext.js  VideoContext.js  VideoList.js  index.js  utils.js
speech_grade_frontend/frontend/src/components/: Footer.js  Header.js  VideoPlayerWithTimeline.js
