[project]
name = "speech-grade"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Michał Pogoda", email = "michalpogoda@hotmail.com" }
]
dependencies = [
    "openai>=1.50.2",
    "python-dotenv>=1.0.1",
    "moviepy>=1.0.3",
    "google-generativeai>=0.8.2",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "google-cloud-core>=2.4.1",
    "google-cloud-aiplatform>=1.68.0",
    "opencv-python>=4.10.0.84",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.11",
    "uvicorn>=0.31.0",
    "langchain>=0.3.1",
    "langgraph>=0.2.28",
    "langchain-openai>=0.2.1",
    "more-itertools>=10.5.0",
    "py-readability-metrics>=1.4.5",
    "pydub>=0.25.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/speech_grade"]
